[package]
name = "milenaguedes-site"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
gloo = "0.11"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Window", "HtmlDocument"] }
